# employees_register_ts

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: python-app.yml
src/: .flake8  .mypy.ini  exceptions.py  main.py  middlewares.py  schemas.py  utils.py
src/api/: __init__.py  utils.py
src/api/employees/v1/: app.py
src/conf/: logging.py  settings.py
src/connections/: postgresql.py
src/frontend/: package.json
src/frontend/public/: index.html
src/frontend/src/: App.css  App.js
src/frontend/src/common/: utils.js
src/frontend/src/components/: add-employee.component.js  employee.component.js  employees-list.component.js
src/frontend/src/services/: employee.service.js
src/migrations/: env.py
src/migrations/versions/: 8384e98cf5b7_initial.py
src/models/: base.py  employee.py
src/tests/: _db_utils.py  conftest.py  factories.py  mixins.py  test_api_v1_employee.py
