[tool.poetry]
name = "Employees register"
version = "0.0.1"
description = "Employees register test task"
authors = ["addovej@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.45"
asyncpg = "^0.27.0"
alembic = "^1.9.0"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
mypy-extensions = "^0.4.3"
pytest = "^6.2.5"
pytest-env = "^0.6.2"
pytest-pythonpath = "^0.7.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
console_output_style = "count"
python_paths = "src tests"
python_classes = "*Test Test*"
python_files = "test_*.py *_test.py"
python_functions = "test_*  *_test"
norecursedirs = ".venv .vscode .devcontainer scripts venv env deploy"
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["unit: Run only unit tests"]
env = [
    "ENVIRONMENT=test",
]
addopts = "-s -p no:warning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"